--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dhruti Template</title>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <!-- https://www.figma.com/community/file/1191370831759274444 -->
@@ -48,7 +63,146 @@
               natural setting and engaging in activities that nourish the mind,
               body, and spirit leaves them feeling rejuvenated and refreshed.
             </p>
-            <button class="mt-1">Find available cabins</button>
+            <button class="mt-1 yellow">Find available cabins</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- bottom -->
+    <div class="container-3">
+      <div class="wrapper">
+        <div class="on-left ver-center content">
+          <h2>Escape from endless Zoom calls</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            quos fuga eius. Sequi corrupti quos amet cumque fugiat quis
+            eligendi.
+          </p>
+          <button class="mt-1 skyblue">Find me perfect gateway</button>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg">
+            <h3>About Us</h3>
+            <ul>
+              <li>Our story</li>
+              <li>Why us</li>
+              <li>How it works</li>
+
+              <li>FAQ</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg">
+            <h3>Our cabins</h3>
+            <ul>
+              <li>North of London</li>
+              <li>South of London</li>
+              <li>East of London</li>
+              <li class="mb-5">West of London</li>
+
+              <li>South of London</li>
+              <li>Lavender Retreat</li>
+              <li>Butterfly Treehouse</li>
+              <li>Mahogany Hideaway</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg">
+            <h3>Get inspired</h3>
+            <ul>
+              <li>Explore nature</li>
+              <li>Hiking trails</li>
+              <li>Swimming</li>
+              <li>Fishing</li>
+              <li>Booting</li>
+              <li class="mb-1">Cycling</li>
+              <li>Rest, relax and re-set</li>
+              <li>Spa treatments</li>
+              <li>Hot tubs</li>
+              <li>Nature Trails</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg">
+            <h3 class="mb-5"></h3>
+            <ul>
+              <li>Great food and drink</li>
+              <li>Pubs</li>
+              <li>Restaurants</li>
+              <li>Food markets</li>
+              <li class="mb-5">Picnics</li>
+              <li>For you and yours</li>
+              <li>Solo or a couple</li>
+              <li>Pet friendly</li>
+              <li>Accessible cabins</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg">
+            <h3>Support</h3>
+            <ul>
+              <li>Help</li>
+              <li>Contact us</li>
+              <li>Privacy Policy</li>
+              <li>Terms of Service</li>
+              <li>Complaints Policy</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero text-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 my-5">
+            <h3>
+              Leave the office behind and
+              <span class="text-warning"> unwind </span>
+            </h3>
+            <p>
+              Welcome to our cozy cabin nestled in the heart of the mountains!
+              Our cabin is the perfect getaway for those seeking peace and
+              relaxation in a natural setting.
+            </p>
+            <div class="mt-2">
+              <img
+                src="./hero-face-1.png"
+                alt="hero face 1"
+                class="img-fluid"
+              />
+              <img
+                src="./hero-face-1.png"
+                alt="hero face 2"
+                class="img-fluid position-relative img-overlap"
+              />
+              <img
+                src="./hero-face-1.png"
+                alt="hero face 3"
+                class="img-fluid position-relative img-overlap"
+              />
+              <img
+                src="./hero-face-1.png"
+                alt="hero face 4"
+                class="img-fluid position-relative img-overlap"
+              />
+              <img
+                src="./hero-face-1.png"
+                alt="hero face 5"
+                class="img-fluid position-relative img-overlap"
+              />
+            </div>
+            <div>
+              <span class="text-success">★</span>Trustpilot
+              <div class="stars d-inline mr-1">
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+                <span>★</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -60,6 +214,20 @@
       padding: 0;
       box-sizing: border-box;
     }
+    /* hero */
+    .hero {
+      background: url("./Hero\ section.svg") no-repeat center center/cover;
+      min-height: 100vh;
+    }
+    .hero {
+      counter-reset: image 0;
+    }
+    .hero .img-overlap {
+      counter-increment: image;
+      top: calc(counter(image) * -20px);
+    }
+
+    /* hero ends */
     .wrapper {
       max-width: min(80vw, 800px);
       margin: 0 auto;
@@ -101,6 +269,32 @@
       flex-direction: column;
       justify-content: center;
     }
+
+    .container-3 {
+      background: url("3.png") no-repeat center center/cover;
+      min-height: 100vh;
+      display: flex;
+      justify-content: flex-end;
+    }
+    .ver-center {
+      height: 100%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    .footer-bottom {
+      background-color: #0c1011;
+      color: lightblue;
+    }
+    .footer-bottom h3 {
+      color: #c5fbd8;
+    }
+    .footer-bottom ul {
+      list-style: none;
+      padding: 0;
+    }
+
     .on-right {
       width: min(80%, 25rem);
       margin-left: auto;
@@ -135,11 +329,17 @@
       margin-bottom: 1rem;
     }
     .content > button {
-      background-color: rgb(172, 150, 53);
       border-radius: 0.5rem;
       padding: 1rem 1.5rem;
       border: none;
       width: max-content;
+    }
+    button.yellow {
+      background-color: rgb(172, 150, 53);
+    }
+
+    button.skyblue {
+      background-color: rgb(194, 221, 231);
     }
     .d-inline {
       display: inline-block;
